Fixed header overflow for image, fixed links z-index issue with background image

--- a/styles.css
+++ b/styles.css
@@ -121,14 +121,15 @@ hr {
 /* ----------------------------------- */
 /* Header */
 .header {
-  background-color: var(--primaryDarkViolet);
+  height: 80vh;
+  overflow: hidden;
 }
 .header__container {
   display: flex;
+  background-color: var(--primaryDarkViolet);
   padding-top: 9rem;
-  padding-bottom: 12rem;
+  height: 60rem;
   position: relative;
-  overflow: hidden;
 }
 .header__container::after {
   content: url(./images/bg-pattern-intro-right-desktop.svg);
@@ -142,7 +143,7 @@ hr {
   position: relative;
 }
 .header__img-container img {
-  width: 47rem;
+  width: 53rem;
   position: absolute;
   top: 0rem;
   right: 0rem;
@@ -167,6 +168,7 @@ hr {
 .features {
   margin-top: 25rem;
   margin-bottom: 10rem;
+  transform: translateY(-25rem);
 }
 .features__heading {
   font-size: 5.9rem;
@@ -236,7 +238,6 @@ hr {
   top: -3.5rem;
   left: -5rem;
   transform: scale(0.85);
-  z-index: 0;
 }
 .footer__logo {
   transform: translateX(-0.5px);
@@ -268,6 +269,7 @@ hr {
 .footer__links-column {
   margin-right: 8rem;
   white-space: nowrap;
+  z-index: 1;
 }
 .footer__links-column:not(:first-child) {
   margin-left: 8rem;
